--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,9 +3,9 @@ name: CI
 on:
   pull_request:
   push:
-      branches:
-        - master
-        - feature/biome
+    branches:
+      - master
+      - feature/biome
 
 permissions:
   contents: read
@@ -30,54 +30,55 @@ jobs:
     runs-on: ${{matrix.platform}}
 
     steps:
-    - name: Configure Git
-      run: |
-        git config --global core.autocrlf false
-        git config --global user.name "Carlo Dapor (bot)"
-        git config --global user.email "catull@gmail.com"
+      - name: Configure Git
+        run: |
+          git config --global core.autocrlf false
+          git config --global user.name "Carlo Dapor (bot)"
+          git config --global user.email "catull@gmail.com"
 
-    - name: Checkout Commit
-      uses: actions/checkout@v4
+      - name: Checkout Commit
+        uses: actions/checkout@v4
 
-    - name: Install pnpm
-      uses: pnpm/action-setup@v4
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
 
-    - name: Setup Node
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{matrix.node}}
-        cache: 'pnpm'
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{matrix.node}}
+          cache: 'pnpm'
 
-    - name: Install pnpm
-      run: npm add --global pnpm
+      - name: Install pnpm
+        run: npm add --global pnpm
 
-    - name: Run pnpm install
-      run: pnpm install
+      - name: Run pnpm install
+        run: pnpm install
 
-    - name: Run pnpm outdated
-      run: pnpm outdated
+      - name: Run pnpm outdated
+        run: pnpm outdated
 
-    - name: Run pnpm audit
-      run: pnpm audit
+      - name: Run pnpm audit
+        run: pnpm audit
 
-    - name: Run pre prebuild
-      run: pnpm run prebuild
+      - name: Run pre prebuild
+        run: pnpm run prebuild
 
-    - name: Run lint on sources and tests
-      run: pnpm run lint
+      - name: Run lint on sources and tests
+        run: pnpm run lint
 
-    - name: Run pre build check
-      run: pnpm run "build:check"
+      - name: Run pre build check
+        run: pnpm run "build:check"
 
-    - name: Run build
-      run: pnpm run build
+      - name: Run build
+        run: pnpm run build
+        env:
+          NODE_OPTIONS: '--max-old-space-size=8192'
 
-    - name: Run prod test suites
-      run: pnpm run "test:prod"
+      - name: Run prod test suites
+        run: pnpm run "test:prod"
 
-    - name: Generate dist/package.json
-      run: pnpm run "dist:package.json"
+      - name: Generate dist/package.json
+        run: pnpm run "dist:package.json"
 
-    - name: Run format dist sources
-      run: pnpm run "format:dist"
-
+      - name: Run format dist sources
+        run: pnpm run "format:dist"
